# ri

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION_STATUS.md  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md
crates/ri-agent-core/: Cargo.toml
crates/ri-agent-core/src/: agent.rs  agent_loop.rs  lib.rs  proxy.rs  types.rs
crates/ri-agent-core/src/harness/: agent_harness.rs  compaction.rs  env.rs  mod.rs  prompt_templates.rs  session.rs  shell_output.rs  skills.rs  system_prompt.rs  truncate.rs
crates/ri-agent-core/tests/: agent_core.rs  agent_harness.rs  execution_env.rs  harness_compaction.rs  harness_truncate.rs  proxy.rs  resources.rs  session_storage.rs
crates/ri-llm-provider/: Cargo.toml
crates/ri-llm-provider/src/: anthropic.rs  anthropic_compat.rs  anthropic_oauth.rs  api_registry.rs  azure_openai.rs  bedrock.rs  cli.rs  diagnostics.rs  env_api_keys.rs  event_stream.rs  faux.rs  github_copilot_headers.rs  github_copilot_oauth.rs  google_shared.rs  google_vertex.rs  http_api_provider.rs  image_models.rs  images_api_registry.rs  json_repair.rs  lib.rs  message_transform.rs  mistral.rs  models.rs  node_http_proxy.rs  oauth_auth_storage.rs  openai_codex_oauth.rs  openai_codex_responses.rs  openai_completions.rs  openai_responses.rs  openrouter_images.rs  overflow.rs  session_resources.rs  simple_options.rs  stream.rs  typebox_helpers.rs  types.rs  validation.rs
crates/ri-llm-provider/tests/: provider_core.rs  provider_live.rs
