[package]
name = "ri-agent-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust agent core migrated from pi-agent-core"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
parking_lot.workspace = true
ri-llm-provider = { path = "../ri-llm-provider" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

